<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_fragment"
    android:orientation="vertical"
    tools:context=".ui.fragments.FavouriteFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_search_box"
        android:paddingHorizontal="20dp"
        android:paddingVertical="12dp">

        <ImageView
            android:id="@+id/iconSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/image_desc"
            android:src="@drawable/search"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/light_grey" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ipSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/search"
            android:inputType="text"
            android:lines="1"
            android:paddingStart="16dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/iconSearch"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="4dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rcvMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:clipToPadding="false"
        android:paddingHorizontal="16dp" />

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/emptyMovies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:flexWrap="wrap"
        app:justifyContent="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_fav_movie"
            android:textAlignment="center"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/toExploreFrag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore_now"
            android:textAlignment="center"
            android:textColor="@color/yellow"
            android:textStyle="bold" />
    </com.google.android.flexbox.FlexboxLayout>

    <TextView
        android:id="@+id/tvNoResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/no_result"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:visibility="gone" />
</LinearLayout>