<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.SignInActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradient">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingTop="86dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="72dp"
                android:text="@string/sign_in"
                android:textColor="#BDBDBD"
                android:textSize="32sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_input_block"
                android:orientation="vertical"
                android:paddingHorizontal="16dp"
                android:paddingVertical="24dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ipEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_input"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:paddingStart="28dp"
                        android:paddingEnd="16dp"
                        android:singleLine="true"
                        android:textColor="#C9C3CF"
                        app:hintTextColor="#C9C3CF" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ipPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bg_input"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:paddingStart="28dp"
                        android:paddingEnd="16dp"
                        android:singleLine="true"
                        android:textColor="#C9C3CF"
                        app:hintTextColor="#C9C3CF" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/tvValidationPrompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="12dp"
                    android:ellipsize="end"
                    android:lines="2"
                    android:textColor="#FF5722"
                    android:textSize="12sp"
                    android:visibility="invisible" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignIn"
                    style="@android:style/Widget.Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_intro_btn"
                    android:text="@string/sign_in"
                    android:textColor="@color/white" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginVertical="12dp">

                    <View
                        android:id="@+id/dividerStart"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="#3E3B3B"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/tvOr"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tvOr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:paddingHorizontal="16dp"
                        android:text="@string/or"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <View
                        android:id="@+id/dividerEnd"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:background="#3E3B3B"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/tvOr"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/btnGoogleSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_google_signin"
                    android:drawableStart="@drawable/google"
                    android:drawablePadding="12dp"
                    android:paddingVertical="16dp"
                    android:paddingStart="28dp"
                    android:paddingEnd="16dp"
                    android:text="@string/sign_in_with_google" />

                <TextView
                    android:id="@+id/btnFacebookSignIn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/bg_google_signin"
                    android:clickable="true"
                    android:drawableStart="@drawable/facebook"
                    android:drawablePadding="12dp"
                    android:paddingVertical="16dp"
                    android:paddingStart="28dp"
                    android:paddingEnd="16dp"
                    android:text="@string/sign_in_with_facebook" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:id="@+id/viewLoading"
        layout="@layout/view_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />
</FrameLayout>