<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_explore_frag"
    tools:context=".ui.fragments.ExploreFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="12dp"
            android:background="@drawable/bg_search_box"
            android:paddingHorizontal="20dp"
            android:paddingVertical="12dp">

            <ImageView
                android:id="@+id/iconSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/image_desc"
                android:src="@drawable/search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/light_grey" />

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/search_movies"
                android:inputType="text"
                android:lines="1"
                android:paddingStart="16dp"
                android:singleLine="true"
                android:textColor="@color/white"
                android:textColorHint="@color/light_grey"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/iconSearch"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/slider"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="8dp"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:overScrollMode="always"
            android:paddingHorizontal="48dp" />

        <LinearLayout
            android:id="@+id/indicatorContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_unchecked_indicator" />

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_unchecked_indicator" />

            <View
                android:layout_width="6dp"
                android:layout_height="6dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/bg_unchecked_indicator" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/trending_movies"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvBestMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="12dp" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loadingTrendingMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                app:indicatorColor="@color/light_grey" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/upcoming_movies"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvUpcomingMovies"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="12dp" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loadingUpcomingMovies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                app:indicatorColor="@color/light_grey" />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/category"
            android:textColor="@color/yellow"
            android:textSize="16sp"
            android:textStyle="bold" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvCategories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="12dp" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loadingGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                app:indicatorColor="@color/light_grey" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="12dp"
                android:text="@string/proposes"
                android:textColor="@color/yellow"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginBottom="12dp"
                android:text="Mix"
                android:textColor="@color/light_grey"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvRow1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:paddingStart="12dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvRow2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:paddingStart="12dp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvRow3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:clipToPadding="false"
                android:paddingStart="12dp" />

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/loadingRecommendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminate="true"
                app:indicatorColor="@color/light_grey" />
        </LinearLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>